--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -30,6 +30,7 @@ function MM_swapImage() { //v3.0
 {% block title %} Teachers {% endblock %}
 {% block content %}
 {% if subject_id == "A" %}
+<a href="/static/files/programming_scratch.pdf" target=_blank role="button" class="btn btn-info">教材簡介</a><BR><BR>
     <img style="margin-left:20px;" src="/static/images/banner_scratch.png">
 		<table style="border:0px; width:900px;">
 		<tr>
@@ -241,6 +242,7 @@ function MM_swapImage() { //v3.0
 {% elif subject_id == "B" %}
 <img src="/static/images/vphysics/vphysics.png">
 <BR><BR>
+<a href="/static/files/programming_vphysics.pdf" target=_blank role="button" class="btn btn-info">教材簡介</a>
 <a href="/static/files/VPhysics.pdf" target="_blank" role="button" class="btn btn-info">石明豐教授編寫的課程文件(pdf,5.28MB)</a>
 <a href="http://vphysics.ntu.edu.tw" target=_blank role="button" class="btn btn-info">更多VPhysics課程</a>
 		<table style="border:0px; width:900px;">
@@ -344,6 +346,7 @@ function MM_swapImage() { //v3.0
 <img src="/static/images/vphysics/certificate.png">
 {% elif subject_id == "C" %}
 <img src="/static/images/euler/euler.png"><BR>
+    <a href="/static/files/programming_euler.pdf" target="_blank" role="button" class="btn btn-info">教材簡介</a>
   <a href="https://projecteuler.net/" target="_blank" role="button" class="btn btn-info">前往尤拉計畫解題網站</a>
 		<table style="border:0px; width:900px;">    
   <tr>
