--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -184,7 +184,33 @@
       <div class="clear"></div>
     </div>
   </div>
-</div>{% endblock %}
+</div>
+    
+<!------------------------------------------->
+<div class="wrapper">
+  <div class="container">
+    <div class="whitebox">
+      <div class="content">
+        <h1>在 Joy of Code 上學習</h1>
+        {{student}} 個學生在這兒領取了 {{certificates.0}} 張證書。
+        <div id="summary">
+          <img src="/static/images/work.png">
+          <div style="left:27px">
+            {{certificates.1.0}} 個學生共 {{certificates.1.1}} 張證書
+          </div>
+          <div style="left:333px">
+            {{certificates.2.0}} 個學生共 {{certificates.2.1}} 張證書
+          </div>
+          <div style="left:646px">
+            {{certificates.3.0}} 個學生共 {{certificates.3.1}} 張證書
+          </div>
+        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+</div>
+{% endblock %}
   
 {% block footer_script %}
 <script>
