--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -171,13 +171,13 @@
         <div id="summary">
           <img src="/static/images/work.png">
           <div style="left:27px">
-            {{works.1.0}} 班次共 {{works.1.1}} 個作業
+            <a href="/student/work/list/1">{{works.1.0}} 班次共 {{works.1.1}} 個作業</a>
           </div>
           <div style="left:333px">
-            {{works.2.0}} 班次共 {{works.2.1}} 個作業
+            <a href="/student/work/list/2">{{works.2.0}} 班次共 {{works.2.1}} 個作業</a>
           </div>
           <div style="left:646px">
-            {{works.3.0}} 班次共 {{works.3.1}} 個作業
+             <a href="/student/work/list/3">{{works.3.0}} 班次共 {{works.3.1}} 個作業</a>
           </div>
         </div>
       </div>
