--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -171,13 +171,13 @@
         <div id="summary">
           <img src="/static/images/work.png">
           <div style="left:27px">
-            <a href="/student/work/list/1">{{works.1.0}} 班次共 {{works.1.1}} 個作業</a>
+            <a href="/student/work/list/1" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.1.0}} 班次共 {{works.1.1}} 個作業</a>
           </div>
           <div style="left:333px">
-            <a href="/student/work/list/2">{{works.2.0}} 班次共 {{works.2.1}} 個作業</a>
+            <a href="/student/work/list/2" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.2.0}} 班次共 {{works.2.1}} 個作業</a>
           </div>
           <div style="left:646px">
-             <a href="/student/work/list/3">{{works.3.0}} 班次共 {{works.3.1}} 個作業</a>
+             <a href="/student/work/list/3" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.3.0}} 班次共 {{works.3.1}} 個作業</a>
           </div>
         </div>
       </div>
