--- a/templates/student/works_list.html
+++ b/templates/student/works_list.html
@@ -26,9 +26,13 @@
          noDataPattern: {
            color: '#ffc147'
          }
-       };
-
+       };  
        chart.draw(dataTable, options);
+      var selectHandler = function(e) {
+          date = dataTable.getValue(chart.getSelection()[0]['row'], 0 )
+          window.location = "/student/work/day/"+{{lesson}}+"/"+date.getFullYear()+"/"+(date.getMonth()+1)+"/"+date.getDate();
+       }      
+       google.visualization.events.addListener(chart, 'select', selectHandler);          
    }
    
    
