--- a/templates/student/works_day.html
+++ b/templates/student/works_day.html
@@ -2,6 +2,7 @@
 {% load tag %}
 {% block content %}
     <div id="calendar_basic" style="width: 1000px;"></div>
+<h1>{{date|date:"l"}}</h1>
 <table class="table" style="width:100%">
             <tr>
                <td>姓名</td>
