--- a/templates/student/lessonA.html
+++ b/templates/student/lessonA.html
@@ -40,7 +40,7 @@
       <iframe width="900" height="520" src="https://www.youtube.com/embed/fAbrNXTgkeo?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4">
-      <form action="/certificate/" method="post" enctype="multipart/form-data">{% csrf_token %}
+      <form action="/certificate/hoc/" method="post" enctype="multipart/form-data">{% csrf_token %}
         <p>
           <input id="id_image" type="file" class="" name="image">
         </p>
