--- a/templates/student/lessonA.html
+++ b/templates/student/lessonA.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load tag %}
 {% block content %}
 <!--//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
 {% if lesson == "A001" %}
@@ -46,6 +47,9 @@
         </p>
         <input type="submit" value="送出" />
       </form>
+      
+      <BR>
+      {{user.id|hoc|safe}}
     </div>
     <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
       <iframe width="900" height="520" src="https://www.youtube.com/embed/AImNJyXxzUA?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
