--- a/templates/student/exam_score.html
+++ b/templates/student/exam_score.html
@@ -1,12 +1,11 @@
 {% for exam in exams %}
-{% if exam.exam_id == 1 %}
-變數
-{% elif exam.exam_id == 2 %}
-選擇結構
-{% else %}
-重複結構
-{% endif %}
-：{{exam.publication_date}}--{{exam.score}}分<BR>
+<ul class="list-group">
+    <li class="list-group-item">
+        <span>{{ exam.test_time|date:"Y/m/d H:i" }}</span>
+        <span>{% if exam.exam_id == 1 %} 變數 {% elif exam.exam_id == 2 %} 選擇結構 {% else %} 重複結構 {% endif %}</span>
+        <span class="badge badge-info">{{ exam.score }}</span> 分
+    </li>
+</ul>
 {% empty %}
 <h2>目前沒有測驗記錄</h2>
 {% endfor %}
