--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-{% load tag %}
+<!DOCTYPE html>
 <!--
 Template Name: Realistic
 Author: <a href="http://www.os-templates.com/">OS Templates</a>
@@ -7,6 +6,7 @@ Author URI: http://www.os-templates.com/
 Licence: Free to use under our free template licence terms
 Licence URI: http://www.os-templates.com/template-terms
 -->
+{% load tag %}
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Joy of Code</title>
@@ -90,7 +90,7 @@ jQuery(function () {
 			<li><a href="/account/admin"><img src="/static/images/icon_admin.png"> 管理</a></li>
 		      {% endif %}	
       {% else %}
-      <li><A href="#"><img width=16 src="/static/images/icon_article.png"> 推薦</A></a>
+      <li><A href="#"><img width=16 src="/static/images/icon_article.png"> 推薦</A>
         <ul>
           <li><a href="https://www.youtube.com/watch?v=4JhlfRAzVKY" target=_blank>怎麼樣成為一個高手</a></li>	
           <li><a href="https://www.youtube.com/watch?v=s7wcbF8QiUQ" target=_blank>成功的要訣：恆毅力</a></li>			
@@ -119,7 +119,6 @@ jQuery(function () {
     <div class="clear"></div>
   </div>
 </div>
-  </div>
 <!-- ####################################################################################################### -->
 <div class="main">
   
@@ -130,7 +129,7 @@ jQuery(function () {
     <div class="whitebox">
       <div class="content">        
         {% block content %}{% endblock %}
-       </div>
+      </div>
       <div class="clear"></div>
     </div>
   </div>
