--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,62 +1,14 @@
 {% extends "base.html" %}
 {% block header %}
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script>
-    // 通常，當資料選項的變動性不大時，都會直接寫成 .js 檔含入即可。
-    var county = new Array();
-    var zone = new Array();
-    var school_name = new Array();
-    var school_id = new Array();
-    {% for county, zone in district %}
-       county[{{forloop.counter|add:-1}}] = [{{county.id}}, "{{county.name}}"];
-       zone[{{forloop.counter|add:-1}}] = new Array();
-       school_name[{{forloop.counter|add:-1}}] = new Array();
-       school_id[{{forloop.counter|add:-1}}] = new Array();
-       {% for q in zone %}
-           zone[{{forloop.parentloop.counter|add:-1}}][{{forloop.counter|add:-1}}] =  [{{q.0.id}}, "{{q.0.name}}"];
-           school_name[{{forloop.parentloop.counter|add:-1}}][{{forloop.counter|add:-1}}] = new Array();
-           school_id[{{forloop.parentloop.counter|add:-1}}][{{forloop.counter|add:-1}}] = new Array();
-           {% for r in q.1 %}
-               school_name[{{forloop.parentloop.parentloop.counter|add:-1}}][{{forloop.parentloop.counter|add:-1}}][{{forloop.counter|add:-1}}] = "{{r.name}}";
-               school_id[{{forloop.parentloop.parentloop.counter|add:-1}}][{{forloop.parentloop.counter|add:-1}}][{{forloop.counter|add:-1}}] = "{{r.id}}";
-           {% endfor %}
-       {% endfor %}
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="/static/register_helper.js" async defer></script>
+  <script>
+  //---------------------------------------------------------------------------
+  var school_pool = [
+    {% for s in schools %}{id: {{ s.id }}, zid: {{ s.zone }}, name: "{{ s.name }}"}, 
     {% endfor %}
-    // 載入 master 選單，同時初始化 detail 選單內容
-    function loadMaster( master, detail, school )
-    {
-      master.options.length = county.length;
-      for( i = 0; i < county.length; i++ )
-      {
-        master.options[ i ] = new Option( county[i][1], county[i][0] );
-        // Option( text , value );
-      }
-      master.selectedIndex = {{school.county}} - 1;
-      doNewMaster( master, detail, school );
-      doNewDetail( master, detail, school );
-    }
-    // 當 master 選單異動時，變更 detail 選單內容
-    function doNewMaster( master, detail, school) {
-      detail.options.length = zone[ master.selectedIndex ].length;
-      for( i = 0; i < zone[ master.selectedIndex ].length; i++ )
-      {
-        detail.options[ i ] = new Option( zone[ master.selectedIndex ][ i ][1],
-                                          zone[ master.selectedIndex ][ i ][0] );
-      }
-      detail.selectedIndex = {{school.zone}} - 1;
-      doNewDetail( master, detail, school );
-    }
-    // 當 detail 選單異動時，變更 school 內容
-    function doNewDetail( master, detail, schools) {
-      schools.options.length = school_name[ master.selectedIndex ][ detail.selectedIndex ].length;
-      for( i = 0; i < school_name[ master.selectedIndex ][ detail.selectedIndex ].length; i++ )
-      {
-        schools.options[ i ] = new Option( school_name[ master.selectedIndex ][ detail.selectedIndex ][ i ],
-                                          school_id[ master.selectedIndex ][ detail.selectedIndex ][ i ] );
-      }
-      schools.selectedIndex = {{school.id}} - 1;
-    }
-</script>
+  ];
+  </script>
 {% endblock %}
 
 {% block content %}
@@ -74,23 +26,15 @@
 
 {% block domready %}
   // Replace TextInput with 3 Select elements
-  $('#id_last_name').replaceWith(`
-<div class="form-inline">
-    <select class="form-control" name="county" id="county" onChange="doNewMaster(document.getElementById('county'), document.getElementById('zone'), document.getElementById('schools'));">
-    </select>
-    <select class="form-control" name="zone" id="zone" onChange="doNewDetail(document.getElementById('county'), document.getElementById('zone'), document.getElementById('schools'));">
-    </select>
-    <select class="form-control" name="last_name" id="schools" placeholder="請選擇...">
-    </select>
-</div>`);
-  //
-  loadMaster( document.getElementById( 'county' ), document.getElementById( 'zone' ) , document.getElementById( 'schools' ) );
-  school = location.href.match(/\?school=(\d+)\/(\d+)\/(\d+)/);
-  if (school && school.length == 4) {
-    $('#county').val(school[1]);
-    doNewMaster( document.getElementById( 'county' ), document.getElementById( 'zone' ) , document.getElementById( 'schools' ) );
-    $('#zone').val(school[2]);
-    doNewDetail( document.getElementById( 'county' ), document.getElementById( 'zone' ) , document.getElementById( 'schools' ) );
-    $('#schools').val(school[3]);
-  }
+  $('#id_last_name').parent().load('/static/school_template.html', null, function() {
+    reset_county();
+    var school = location.href.match(/\?school=(\d+)\/(\d+)\/(\d+)/);
+    if (school && school.length == 4) {
+      $('#county').val(school[1]);
+      reset_zone();
+      $('#zone').val(school[2]);
+      reset_school();
+      $('#schools').val(school[3]);
+    }
+  });
 {% endblock %}
