--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,10 @@ Licence: Free to use under our free template licence terms
 Licence URI: http://www.os-templates.com/template-terms
 -->
 {% load tag %}
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 <title>Joy of Code</title>
-
-
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
 <!-- Superfish Menu -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>  
@@ -30,7 +28,7 @@ jQuery(function () {
     $('form>p>textarea').addClass('form-control');   
     $('td>select').addClass('form-control'); 	
     $('td>input').addClass('form-control');  		
-	  $('input').addClass('form-control'); 
+    $('input').addClass('form-control'); 
 });
 
 </script>
@@ -144,7 +142,6 @@ jQuery(function () {
 		<p class="fl_left">Copyright &copy; All Rights Reserved</p>
     <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>
 		Designed by <a href='http://www.freepik.com'>Freepik</a></p>
-		</p>
     <br class="clear" />
   </div>
 </div>
