--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -21,7 +21,8 @@
                 <a href="/teacher/classroom/edit/{{classroom.id}}" role="button" class="btn btn-success">修改</a>
                 <a href="/student/classmate/{{classroom.id}}" role="button" class="btn btn-success">學生</a>
                 <a href="/student/group/{{classroom.id}}" role="button" class="btn btn-success">組別</a>
-							  <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">作業</a>
+							  <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">作業1</a>
+							  <a href="/teacher/work2/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">作業2</a>                
 							  <a href="/teacher/work1/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">小老師</a>
 							  <a href="/teacher/memo/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">心得</a>						  
 							  <a href="/teacher/grade/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">成績</a>
