--- a/templates/student/submit.html
+++ b/templates/student/submit.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% load tag %}
 {% block content %}
-      {% include "student/submitB.html" with index=2 %}
+      {% include "student/submitB.html" with index=index %}
 {% endblock %}
