--- a/templates/student/work_list.html
+++ b/templates/student/work_list.html
@@ -12,7 +12,7 @@
 				  <td>{% if not work.score or work.score == -1 %}<a href="/student/work/submit/{{typing}}/{{classroom.lesson}}/{% if typing == "0" %}{{forloop.counter}}{% else %}{{lesson.id}}{% endif %}">繳交</a>{% endif %}</td>
 				  <td><a href="/student/work/show/{{typing}}/{{classroom.lesson}}/{% if typing == "0" %}{{forloop.counter}}{% else %}{{lesson.id}}{% endif %}/{{user.id}}">觀看({{work.publication_date}}){% if work.score > -1 %}--{{work.score}}{% endif %}</a></td>							
 								<td><a href="/student/work/rank/{{typing}}/{{classroom.lesson}}/{{forloop.counter}}">排行榜</a></td>  
-								<td><a href="/student/work/memo/{{typing}}/{{classroom.lesson}}/{{classroom.id}}/{{forloop.counter}}">心得</a></td>
+								<td><a href="/student/work/memo/{{typing}}/{{classroom.lesson}}/{{classroom.id}}/{% if typing == "0" %}{{forloop.counter}}{% else %}{{lesson.id}}{% endif %}">心得</a></td>
 				</tr>				
           {% endfor %}		
         </table>
